python/testData/quickFixes/PyWrapInExceptionQuickFixTest/simple.py
raise <error descr="Raising a string exception">"Some<caret> String"</error>